🤖 手動清理卡檔與更新程式碼

--- a/reports/report_2026-02-13.html
+++ b/reports/report_2026-02-13.html
@@ -90,7 +90,7 @@
                         <svg class="w-64 h-64 text-indigo-900" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"/></svg>
                     </div>
                     <div class="relative z-10 prose prose-indigo max-w-none text-slate-600 leading-relaxed text-lg">
-                        你好，我是您的資深金融分析師與網站編輯。以下是針對今日市場資訊的深度分析報告：<br><br><h3 class="text-lg font-bold text-slate-800 mt-6 mb-3 border-l-4 border-indigo-500 pl-3 bg-indigo-50/50 py-1">1. 市場總體情緒</h3><b class="text-indigo-600 font-bold">情緒分數：+0.8 <span class="text-2xl animate-pulse">🟢</span> <b class="text-green-600">利多趨勢</b> 利多</b><br>> <b class="text-indigo-600 font-bold">分析師點評：</b> 市場情緒呈現高度樂觀。AI 領頭羊 Anthropic 的估值在半年內翻倍，顯示資本市場對生成式 AI 的商業變現能力（特別是 Claude Code 的營收貢獻）充滿信心。同時，Google 與微軟在技術底層（WebMCP）的聯手，以及開發工具對 AI 代理（AI Agents）的全面支援，預示著 AI 正從「對話框」邁向「自動執行任務」的新紀元，這將帶動下一波科技產業的成長動能。<br><br>---<br><br><h3 class="text-lg font-bold text-slate-800 mt-6 mb-3 border-l-4 border-indigo-500 pl-3 bg-indigo-50/50 py-1">2. 核心事件分析</h3><br>*   <b class="text-indigo-600 font-bold">Anthropic 估值飆升與 AI 代理商機爆發：</b><br>    Anthropic 完成 300 億美元融資，估值達 3,800 億美元。值得關注的是其「Claude Code」程式代理模型在不到一年內年化營收已達 25 億美元，且在 GitHub 公開提交紀錄中佔比快速攀升。這證明了 AI 代理在專業領域（程式開發）具備極強的變現能力，是 AI 產業從燃燒資本轉向高收益的重要訊號。<br><br>*   <b class="text-indigo-600 font-bold">WebMCP 協議：AI 代理與網頁互動的標準化革命：</b><br>    Google 與微軟聯手發起 WebMCP 專案，旨在標準化 AI 代理與網頁元件的互動。這將解決目前 AI 操作網頁時穩定性不足的問題，未來 AI 代理將能像人類一樣精準操作複雜的網頁表單與動態流程，這對電子商務、自動化流程（RPA）與軟體服務（SaaS）領域將產生深遠影響。<br><br>*   <b class="text-indigo-600 font-bold">開發環境（IDE）的 AI 代理化升級：</b><br>    VS Code 1.109 與 Copilot Studio 擴充程式的更新，顯示開發者工具正全面進入「多代理協作」時代。透過沙箱機制、代理技能（Agent Skills）與組織級自訂指示，開發流程已不只是單純的程式碼補全，而是轉向更高階的自動化任務管理與 DevOps 管線同步，這將大幅提升大型企業的軟體生產力。<br><br>*   <b class="text-indigo-600 font-bold">企業平臺工程與技術債清理：</b><br>    巴西最大銀行的 1.8 萬人平臺工程實踐，反映了頂尖金融機構如何透過標準化架構管理超大規模開發團隊。此外，jQuery 4.0 睽違十年的更新，重點在於清理技術債與提升資安（可信型別），這提醒投資人與技術經理人，在追求 AI 前沿技術的同時，基礎架構的現代化與安全合規仍是企業競爭力的基石。<br><br>---
+                        您好，我是您的金融分析師與網站編輯。針對您提供的新聞內容，以下是我的專業分析報告：<br><br><h3 class="text-lg font-bold text-slate-800 mt-6 mb-3 border-l-4 border-indigo-500 pl-3 bg-indigo-50/50 py-1">1. 市場總體情緒</h3><b class="text-indigo-600 font-bold">情緒分數：+0.7</b> <span class="text-2xl animate-pulse">🟢</span> <b class="text-green-600">利多趨勢</b> <b class="text-indigo-600 font-bold">利多</b><br>*分析理由：此新聞強調了台灣在全球產業鏈中不可或缺的地位，不僅限於半導體，更涵蓋電子製造、航空與傳產。這種「產業群聚效應」強化了台灣市場的長期韌性與投資吸引力，對於台股整體的信用評等與國際評價具有正面激勵作用。*<br><br>---<br><br><h3 class="text-lg font-bold text-slate-800 mt-6 mb-3 border-l-4 border-indigo-500 pl-3 bg-indigo-50/50 py-1">2. 核心事件分析</h3><br>1.  <b class="text-indigo-600 font-bold">台灣產業地圖引發國際關注</b>：瑞典記者悠野（Jojje Olsson）分享的「台灣企業地圖」羅列了 64 家世界級企業。這不僅提升了台灣品牌的國際能見度，也向全球投資者展示了台灣除了 TSMC 之外，在聯發科、廣達、鴻海等多元領域的領導實力。<br>2.  <b class="text-indigo-600 font-bold">從「矽盾」延伸至「全產業盾」</b>：分析指出台灣的價值不只在於半導體，還包括航空、自行車（捷安特）及餐飲服務。這種多元化的全球競爭力，使得台灣在國際地緣政治博弈中，擁有比單一產業更強的談判籌碼。<br>3.  <b class="text-indigo-600 font-bold">地緣政治與經濟價值的掛鉤</b>：輿論高度關注台灣的經濟價值如何影響兩岸關係。新聞中提到「中國想要吞併台灣的原因之一」正是基於這些頂尖企業的戰略價值。這反映出在 AI 與高科技時代，台灣已被視為全球供應鏈的中心。<br><br>---<br><br><h3 class="text-lg font-bold text-slate-800 mt-6 mb-3 border-l-4 border-indigo-500 pl-3 bg-indigo-50/50 py-1">3. 新聞分類標記</h3>
                     </div>
                 </div>
             </section>
@@ -104,78 +104,15 @@
                     <span class="px-3 py-1 bg-indigo-50 text-indigo-600 text-[11px] font-black rounded-full uppercase tracking-widest border border-indigo-100">
                         其他
                     </span>
-                    <span class="text-slate-400 text-xs">下午04:13</span>
+                    <span class="text-slate-400 text-xs">下午07:00</span>
                 </div>
-                <h3 class="text-slate-800 font-bold leading-snug text-lg mb-3 group-hover:text-indigo-600 transition-colors">DevOps快報第4期：Chrome開始支援WebMCP，要讓AI代理直接和網頁元件互動，巴西最大銀行打造18000人協作的開發者平臺</h3>
-                <div class="text-xs text-slate-400 font-medium mb-4 flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-slate-300 mr-2"></span>iThome
-                </div>
-            </div>
-            <div class="pt-4 border-t border-slate-50 flex justify-end">
-                <a href="https://www.ithome.com.tw/news/173955" target="_blank" class="inline-flex items-center text-sm font-bold text-indigo-500 hover:text-indigo-700 transition-colors">
-                    閱讀全文 
-                    <svg class="w-4 h-4 ml-1 transform group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
-                </a>
-            </div>
-        </div>
-        <div class="news-card group bg-white rounded-2xl p-6 shadow-sm hover:shadow-xl transition-all duration-300 border border-slate-100 flex flex-col justify-between" 
-             data-category="其他">
-            <div>
-                <div class="flex items-center justify-between mb-4">
-                    <span class="px-3 py-1 bg-indigo-50 text-indigo-600 text-[11px] font-black rounded-full uppercase tracking-widest border border-indigo-100">
-                        其他
-                    </span>
-                    <span class="text-slate-400 text-xs">下午04:13</span>
-                </div>
-                <h3 class="text-slate-800 font-bold leading-snug text-lg mb-3 group-hover:text-indigo-600 transition-colors">Anthropic完成300億美元的融資，身價上看3,800億美元</h3>
-                <div class="text-xs text-slate-400 font-medium mb-4 flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-slate-300 mr-2"></span>iThome
-                </div>
-            </div>
-            <div class="pt-4 border-t border-slate-50 flex justify-end">
-                <a href="https://www.ithome.com.tw/news/173953" target="_blank" class="inline-flex items-center text-sm font-bold text-indigo-500 hover:text-indigo-700 transition-colors">
-                    閱讀全文 
-                    <svg class="w-4 h-4 ml-1 transform group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
-                </a>
-            </div>
-        </div>
-        <div class="news-card group bg-white rounded-2xl p-6 shadow-sm hover:shadow-xl transition-all duration-300 border border-slate-100 flex flex-col justify-between" 
-             data-category="其他">
-            <div>
-                <div class="flex items-center justify-between mb-4">
-                    <span class="px-3 py-1 bg-indigo-50 text-indigo-600 text-[11px] font-black rounded-full uppercase tracking-widest border border-indigo-100">
-                        其他
-                    </span>
-                    <span class="text-slate-400 text-xs">下午04:13</span>
-                </div>
-                <h3 class="text-slate-800 font-bold leading-snug text-lg mb-3 group-hover:text-indigo-600 transition-colors">財神到！社群平台熱議全台Top6「財神廟」</h3>
+                <h3 class="text-slate-800 font-bold leading-snug text-lg mb-3 group-hover:text-indigo-600 transition-colors">難怪中國想統一！瑞典記者1圖曝台灣超強實力「不只台積電」</h3>
                 <div class="text-xs text-slate-400 font-medium mb-4 flex items-center">
                     <span class="w-1.5 h-1.5 rounded-full bg-slate-300 mr-2"></span>自由時報
                 </div>
             </div>
             <div class="pt-4 border-t border-slate-50 flex justify-end">
-                <a href="https://ec.ltn.com.tw/article/breakingnews/5342660" target="_blank" class="inline-flex items-center text-sm font-bold text-indigo-500 hover:text-indigo-700 transition-colors">
-                    閱讀全文 
-                    <svg class="w-4 h-4 ml-1 transform group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
-                </a>
-            </div>
-        </div>
-        <div class="news-card group bg-white rounded-2xl p-6 shadow-sm hover:shadow-xl transition-all duration-300 border border-slate-100 flex flex-col justify-between" 
-             data-category="其他">
-            <div>
-                <div class="flex items-center justify-between mb-4">
-                    <span class="px-3 py-1 bg-indigo-50 text-indigo-600 text-[11px] font-black rounded-full uppercase tracking-widest border border-indigo-100">
-                        其他
-                    </span>
-                    <span class="text-slate-400 text-xs">下午04:13</span>
-                </div>
-                <h3 class="text-slate-800 font-bold leading-snug text-lg mb-3 group-hover:text-indigo-600 transition-colors">台南重溪國小鄰近科工區 總統盃黑客松團隊助設空污警示燈</h3>
-                <div class="text-xs text-slate-400 font-medium mb-4 flex items-center">
-                    <span class="w-1.5 h-1.5 rounded-full bg-slate-300 mr-2"></span>自由時報
-                </div>
-            </div>
-            <div class="pt-4 border-t border-slate-50 flex justify-end">
-                <a href="https://news.ltn.com.tw/news/life/breakingnews/5342653" target="_blank" class="inline-flex items-center text-sm font-bold text-indigo-500 hover:text-indigo-700 transition-colors">
+                <a href="https://news.ltn.com.tw/news/world/breakingnews/5342854" target="_blank" class="inline-flex items-center text-sm font-bold text-indigo-500 hover:text-indigo-700 transition-colors">
                     閱讀全文 
                     <svg class="w-4 h-4 ml-1 transform group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg>
                 </a>
